...
    // Register Nib classes to be used on the CollectionView.
    [self.collectionView registerClass:[UICollectionViewCell class] forCellWithReuseIdentifier:reuseIdentifier];
    [self.collectionView registerNib:[UINib nibWithNibName:@"EventsCell" bundle:nil] forCellWithReuseIdentifier:[EventsCell cell_ID]];
    
    //Creating A Search Bar.
    self.searchBar = [[UISearchBar alloc] initWithFrame:CGRectMake(0, 64, 415, 44)];
    self.searchBar.placeholder = @"Enter Topic for Events";
    self.searchBar.delegate =self;
    self.searchBar.tintColor =[self.colourDict objectForKey:[standardUserDefaults objectForKey:@"settingsColor"]];
    [self.searchBar setBackgroundColor:[self.colourDict objectForKey:[standardUserDefaults objectForKey:@"settingsColor"]]];
    [self.searchBar setBarTintColor:[self.colourDict objectForKey:[standardUserDefaults objectForKey:@"settingsColor"]]];
    [self.collectionView addSubview:self.searchBar];
    
...
    UITapGestureRecognizer *tap = [[UITapGestureRecognizer alloc] initWithTarget:self action:@selector(dismissKeyboard)];
    tap.cancelsTouchesInView = NO;
    [self.view addGestureRecognizer:tap];
    
    
    //Creating Bar Button item, this Will show the users the features available in this View.
    UIBarButtonItem *barButtonItem = [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"info"]
                                                                      style:UIBarButtonItemStylePlain
                                                                     target:self
                                                                     action:@selector(infoButton:)];
    self.navigationItem.rightBarButtonItem = barButtonItem;
}

...
        }
    }
    // A button is Created so that we can access of social networks
    // installed on the current device and then post to them.
    CGRect btnRect = CGRectMake(340,263, 30, 20);
    UIButton *cellBtn = [[UIButton alloc] initWithFrame:btnRect];
    [cellBtn setBackgroundImage:[UIImage imageNamed:@"myShare"] forState:UIControlStateNormal];
    cellBtn.layer.cornerRadius = 5.0f;
    cellBtn.clipsToBounds =YES;
    [cellBtn setTitle:@"" forState:UIControlStateNormal];
    [cell.contentView addSubview:cellBtn];
    [cellBtn addTarget:self action:@selector(shareButtonTapped:) forControlEvents:UIControlEventTouchUpInside];
    [cellBtn setTag:indexPath.row];
...
